force-app/main/default/objects/Question__c/fields/Customize_Detail__c.field-meta.xml
<CustomField>
    <fullName>Customize_Detail__c</fullName>
    <label>Customize Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>