force-app/main/default/objects/Question__c/fields/Module_Progress__c.field-meta.xml
<CustomField>
    <fullName>Module_Progress__c</fullName>
    <label>Module Progress</label>
    <referenceTo>Module_Progress__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>