force-app/main/default/objects/Question__c/fields/Question_Master__c.field-meta.xml
<CustomField>
    <fullName>Question_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question Master</label>
    <referenceTo>Question_Master__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <type>Lookup</type>
</CustomField>