force-app/main/default/objects/Question__c/recordTypes/Base.recordType-meta.xml
<RecordType>
    <fullName>Base</fullName>
    <active>true</active>
    <label>Base</label>
</RecordType>