force-app/main/default/objects/Question__c/recordTypes/Client.recordType-meta.xml
<RecordType>
    <fullName>Client</fullName>
    <active>true</active>
    <label>Client</label>
</RecordType>